kubernetes/dev/kafka/kafka-ui-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  labels:
    name: kafka-ui
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31890
      name: http
  selector:
    app: kafka-ui
